# mov-automation

./: .gitlab-ci.yml  README.md
app/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
app/app/: main.py  models.py
app/app/__pycache__/: main.cpython-38.pyc.140102954465104
app/app/app_models/: movie_model.py
app/tests/: conftest.py
app/tests/test_db/: test_models.py
app/tests/test_scraping/: test_selenium.py
driver/: Dockerfile  readme.txt
