[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["treylee <trieveon.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
pytest = "^7.1.1"
asyncpg = "^0.25.0"
pydantic = "^1.9.0"
tortoise-orm = "^0.19.0"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.10.0"
trio = "^0.20.0"
selenium = "^4.1.3"
install = "^1.3.5"
webdriver-setup = "^1.1.0"
pytest-asyncio = "^0.18.3"
tortoise = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
